# mStopWatch_Linux

./: .clang-format  .clang-tidy  README.md  mStopWatch.cpp  meson.build  org.slbtty.mStopWatch.desktop.in
